# SportDiary

Backend/: app.py  pyproject.toml
Backend/EVENT_parser/: GEOSPLIT.py  SFR_parse.py  SI_parse.py  common_functions.py  geotable.py  names_and_sex_js.py  split.py
